[CXF-7517]detect jvm version and specify necessary jvm args for java9 so that users needn't specify it in plugin configuration
Former-commit-id: d529ecd2252046c0e55fbe7b5e6a24c7b0d07301